--- a/Pagina_Relatorio_css.css
+++ b/Pagina_Relatorio_css.css
@@ -41,5 +41,11 @@ body{
 }
 
 #conteudo h2{
-     padding: 30px;
+    padding: 30px;
+}
+
+#gif-loading{
+    position:absolute;
+    left:50%;
+    top:40%;
 }
