--- a/Pagina_Relatorio_css.css
+++ b/Pagina_Relatorio_css.css
@@ -7,6 +7,10 @@ body{
     height: 100%;
 }
 
+img.ui-datepicker-trigger{
+    vertical-align: middle;
+}
+
 #conteudo{
 	width: 1000px; 
     min-width: 1000px; 
